tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Invalid/TwoInterfaces.php
<?php

declare(strict_types=1);

namespace Fixture\SingleClassPerFile\Invalid;

interface TwoInterfacesFirst {}

interface TwoInterfacesSecond {}
